fixed the issue with aligning the images 👨‍🍳

--- a/styles/style.css
+++ b/styles/style.css
@@ -285,19 +285,17 @@ main {
     gap: 3em;
     justify-content: space-between;
     align-items: center;
-    padding: 70px 20px;
     height: 670px;
 }
 
 .connect .top .left {
     width: 35%;
-    height: 100%;
     display: flex;
     align-items: center;
 }
 
 .connect .top .left img {
-    height: 630px;
+    height: 650px;
 }
 
 .connect .top .right {
@@ -311,11 +309,18 @@ main {
 }
 
 .connect .top .right .img1 {
-    height: 90%;
+    height: 283px;
     width: 90%;
 }
 
 .connect .top .right img {
     width: 100%;
     height: 100%;
+    background-position: center;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.connect .top .right .i2 {
+    height: 300px;
 }
